fastapi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: amarouane-fastapi:v1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
